# slack

./: .gitmodules  Cargo.toml  README.md  build.rs
codegen/: Cargo.toml
codegen/slack-api-ref/methods/api/: api.test.json
codegen/slack-api-ref/methods/channels/: channels.kick.json
codegen/slack-api-ref/methods/files/: files.comments.add.json
codegen/slack-api-ref/methods/stars/: stars.list.json
codegen/src/: errors.rs  lib.rs  schema.rs  spec_types.rs  types.rs
codegen/templates/: method.rs  mod.rs  slack_types.rs
fixtures/im/: history.http
src/: client.rs  errors.rs  lib.rs  slack_types.rs  types.rs
src/api/: mod.rs  test.rs
src/auth/: mod.rs  revoke.rs  test.rs
src/bots/: info.rs  mod.rs
src/channels/: archive.rs  create.rs  history.rs  info.rs  invite.rs  join.rs  kick.rs  leave.rs  list.rs  mark.rs  mod.rs  rename.rs  set_purpose.rs  set_topic.rs  unarchive.rs
src/chat/: delete.rs  me_message.rs  mod.rs  post_message.rs  update.rs
src/dnd/: end_dnd.rs  end_snooze.rs  info.rs  mod.rs  set_snooze.rs  team_info.rs
src/emoji/: list.rs  mod.rs
src/files/: comments_add.rs  comments_delete.rs  comments_edit.rs  delete.rs  info.rs  list.rs  mod.rs  revoke_public_url.rs  shared_public_url.rs  upload.rs
src/groups/: archive.rs  close.rs  create.rs  create_child.rs  history.rs  info.rs  invite.rs  kick.rs  leave.rs  list.rs  mark.rs  mod.rs  open.rs  rename.rs  set_purpose.rs  set_topic.rs  unarchive.rs
src/im/: close.rs  history.rs  list.rs  mark.rs  mod.rs  open.rs
src/im_orig/: history.rs  mod.rs
src/mpim/: close.rs  history.rs  list.rs  (+3 more)
(+50 files in other folders)
