[package]
name = "codegen"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]

[dependencies]
error-chain = "0.10.0"
tera = { git = "https://github.com/keats/tera", branch = "next" }
lazy_static = "0.2.2"
walkdir = "1"
serde = "0.9.7"
serde_derive = "0.9.7"
serde_json = "0.9.6"
Inflector = "*"